--- a/StudentManagment/StudentManagment.csproj
+++ b/StudentManagment/StudentManagment.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="CsvHelper" Version="31.0.4" />
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="EPPlus" Version="7.2.2" />
     <PackageReference Include="EPPlus.System.Drawing" Version="6.1.1" />
     <PackageReference Include="MailKit" Version="4.7.1" />
@@ -19,6 +19,8 @@
     <PackageReference Include="MimeKit" Version="4.7.1" />
     <PackageReference Include="NetCore.AutoRegisterDi" Version="2.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Select.HtmlToPdf.NetCore" Version="24.1.0" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="26.2.10" />
   </ItemGroup>
 
   <ItemGroup>
